# artifacts/api-server/src/routes/index.ts
@@ -2,11 +2,13 @@ import { Router, type IRouter } from "express";
 import healthRouter from "./health";
 import ordersRouter from "./orders";
 import phonesRouter from "./phones";
+import settingsRouter from "./settings";
 
 const router: IRouter = Router();
 
 router.use(healthRouter);
 router.use(ordersRouter);
 router.use(phonesRouter);
+router.use(settingsRouter);
 
 export default router;
