# lib/db/src/schema/index.ts
@@ -1,2 +1,3 @@
 export * from "./orders";
 export * from "./phones";
+export * from "./settings";
